# TinyRendererLearn

./: .gitignore  LICENSE  README.md
TinyRendererLearn/: CMakeLists.txt  TinyRendererLearn.cpp  TinyRendererLearn.h  basicShader.cpp  basicShader.h  bindShader.cpp  bindShader.h  geometry.cpp  geometry.h  gouraudShader.cpp  gouraudShader.h  model.cpp  model.h  normalMappingShader.cpp  normalMappingShader.h  normalWithShadowShader.cpp  normalWithShadowShader.h  postProcessShader.cpp  postProcessShader.h  shader.h  shadowMapShader.cpp  shadowMapShader.h  tgaimage.cpp  tgaimage.h
TinyRendererLearn/result/: ao_output.tga  ao_postprocess_output.tga  shadow_shadowmap.tga
